// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render CallHistory component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex mt-3"
      >
        <div
          class="w-full"
        >
          <h4>
            Call History
          </h4>
          <div
            class="relative overflow-x-auto shadow-md sm:rounded-lg"
          >
            <table
              class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
            >
              <thead
                class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
              >
                <tr>
                  <th
                    class="px-6 py-3"
                    scope="col"
                  />
                  <th
                    class="px-6 py-3"
                    scope="col"
                  >
                    Title
                  </th>
                  <th
                    class="px-6 py-3"
                    scope="col"
                  >
                    Added
                  </th>
                  <th
                    class="px-6 py-3"
                    scope="col"
                  >
                    Duration
                  </th>
                  <th
                    class="px-6 py-3"
                    scope="col"
                  >
                    Phone Number
                  </th>
                  <th
                    class="px-6 py-3"
                    scope="col"
                  >
                    Related Opportunity
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
                >
                  <td
                    class="px-6 py-4"
                  >
                    <i
                      class="bi bi-telephone"
                    />
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    Closing the deal
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    6 hours ago
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    31m 30s
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    123456789
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    Not Set
                  </td>
                </tr>
                <tr
                  class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
                >
                  <td
                    class="px-6 py-4"
                  >
                    <i
                      class="bi bi-telephone"
                    />
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    Initial discussion
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    3 days ago
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    35m 14s
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    123456789
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    Not Set
                  </td>
                </tr>
                <tr
                  class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
                >
                  <td
                    class="px-6 py-4"
                  >
                    <i
                      class="bi bi-telephone"
                    />
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    Initial catalog launch
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    3 days ago
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    45m 20s
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    123456789
                  </td>
                  <td
                    class="px-6 py-4"
                  >
                    Not Set
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex mt-3"
    >
      <div
        class="w-full"
      >
        <h4>
          Call History
        </h4>
        <div
          class="relative overflow-x-auto shadow-md sm:rounded-lg"
        >
          <table
            class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
          >
            <thead
              class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
            >
              <tr>
                <th
                  class="px-6 py-3"
                  scope="col"
                />
                <th
                  class="px-6 py-3"
                  scope="col"
                >
                  Title
                </th>
                <th
                  class="px-6 py-3"
                  scope="col"
                >
                  Added
                </th>
                <th
                  class="px-6 py-3"
                  scope="col"
                >
                  Duration
                </th>
                <th
                  class="px-6 py-3"
                  scope="col"
                >
                  Phone Number
                </th>
                <th
                  class="px-6 py-3"
                  scope="col"
                >
                  Related Opportunity
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
              >
                <td
                  class="px-6 py-4"
                >
                  <i
                    class="bi bi-telephone"
                  />
                </td>
                <td
                  class="px-6 py-4"
                >
                  Closing the deal
                </td>
                <td
                  class="px-6 py-4"
                >
                  6 hours ago
                </td>
                <td
                  class="px-6 py-4"
                >
                  31m 30s
                </td>
                <td
                  class="px-6 py-4"
                >
                  123456789
                </td>
                <td
                  class="px-6 py-4"
                >
                  Not Set
                </td>
              </tr>
              <tr
                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
              >
                <td
                  class="px-6 py-4"
                >
                  <i
                    class="bi bi-telephone"
                  />
                </td>
                <td
                  class="px-6 py-4"
                >
                  Initial discussion
                </td>
                <td
                  class="px-6 py-4"
                >
                  3 days ago
                </td>
                <td
                  class="px-6 py-4"
                >
                  35m 14s
                </td>
                <td
                  class="px-6 py-4"
                >
                  123456789
                </td>
                <td
                  class="px-6 py-4"
                >
                  Not Set
                </td>
              </tr>
              <tr
                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
              >
                <td
                  class="px-6 py-4"
                >
                  <i
                    class="bi bi-telephone"
                  />
                </td>
                <td
                  class="px-6 py-4"
                >
                  Initial catalog launch
                </td>
                <td
                  class="px-6 py-4"
                >
                  3 days ago
                </td>
                <td
                  class="px-6 py-4"
                >
                  45m 20s
                </td>
                <td
                  class="px-6 py-4"
                >
                  123456789
                </td>
                <td
                  class="px-6 py-4"
                >
                  Not Set
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render SellerDetails component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex m-3"
      >
        <div
          class="w-full"
        >
          <h3
            class="font-bold"
          >
            Seller Details
          </h3>
          <div
            class="flex"
          >
            <div
              class="md:w-5/12"
            >
              <div
                class="flex mt-1 items-center"
              >
                <div
                  class="md:w-2/12"
                >
                  <div
                    class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                  >
                    JS
                  </div>
                </div>
                <div
                  class="md:w-6/12"
                >
                  <h4
                    class="m-0"
                  >
                    James Smith
                  </h4>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex mt-3 border rounded p-3 bg-gray-100 justify-center text-center"
          >
            <div
              class="w-1/6"
            >
              <div
                class="font-bold text-gray-500"
              >
                Talk to listen ratio
              </div>
              <div
                class="font-bold"
              >
                52/48%
              </div>
            </div>
            <div
              class="w-1/6"
            >
              <div
                class="font-bold text-gray-500"
              >
                Talking speed
              </div>
              <div
                class="font-bold"
              >
                156.8 wpm
              </div>
            </div>
            <div
              class="w-1/6"
            >
              <div
                class="font-bold text-gray-500"
              >
                Switches per hour
              </div>
              <div
                class="font-bold"
              >
                32.72
              </div>
            </div>
            <div
              class="w-1/4"
            >
              <div
                class="font-bold text-gray-500"
              >
                Pause before speaking
              </div>
              <div
                class="font-bold"
              >
                68.97ms
              </div>
            </div>
            <div
              class="w-1/4"
            >
              <div
                class="font-bold text-gray-500"
              >
                Longest customer monologue
              </div>
              <div
                class="font-bold"
              >
                37sec
              </div>
            </div>
          </div>
          <div
            class="flex mt-3"
          >
            <div
              class="w-full"
            >
              <h4>
                Seller Insights
              </h4>
              <div
                class="flex gap-2 text-center"
              >
                <div
                  class="flex-1 border border-blue-500 rounded p-2"
                >
                  James Smith has been talking too fast in most conversations
                </div>
                <div
                  class="flex-1 border border-blue-500 rounded p-2"
                >
                  James Smith's talk-to-listen ratio is 13% higher than the team's average
                </div>
                <div
                  class="flex-1 border border-blue-500 rounded p-2"
                >
                  Positive customer sentiments is higher than the average in 38% of calls
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex mt-3"
          >
            <div
              class="w-full"
            >
              <h4>
                Call History
              </h4>
              <div
                class="relative overflow-x-auto shadow-md sm:rounded-lg"
              >
                <table
                  class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
                >
                  <thead
                    class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
                  >
                    <tr>
                      <th
                        class="px-6 py-3"
                        scope="col"
                      />
                      <th
                        class="px-6 py-3"
                        scope="col"
                      >
                        Title
                      </th>
                      <th
                        class="px-6 py-3"
                        scope="col"
                      >
                        Added
                      </th>
                      <th
                        class="px-6 py-3"
                        scope="col"
                      >
                        Duration
                      </th>
                      <th
                        class="px-6 py-3"
                        scope="col"
                      >
                        Phone Number
                      </th>
                      <th
                        class="px-6 py-3"
                        scope="col"
                      >
                        Related Opportunity
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr
                      class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
                    >
                      <td
                        class="px-6 py-4"
                      >
                        <i
                          class="bi bi-telephone"
                        />
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        Closing the deal
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        6 hours ago
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        31m 30s
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        123456789
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        Not Set
                      </td>
                    </tr>
                    <tr
                      class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
                    >
                      <td
                        class="px-6 py-4"
                      >
                        <i
                          class="bi bi-telephone"
                        />
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        Initial discussion
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        3 days ago
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        35m 14s
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        123456789
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        Not Set
                      </td>
                    </tr>
                    <tr
                      class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
                    >
                      <td
                        class="px-6 py-4"
                      >
                        <i
                          class="bi bi-telephone"
                        />
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        Initial catalog launch
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        3 days ago
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        45m 20s
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        123456789
                      </td>
                      <td
                        class="px-6 py-4"
                      >
                        Not Set
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex m-3"
    >
      <div
        class="w-full"
      >
        <h3
          class="font-bold"
        >
          Seller Details
        </h3>
        <div
          class="flex"
        >
          <div
            class="md:w-5/12"
          >
            <div
              class="flex mt-1 items-center"
            >
              <div
                class="md:w-2/12"
              >
                <div
                  class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                >
                  JS
                </div>
              </div>
              <div
                class="md:w-6/12"
              >
                <h4
                  class="m-0"
                >
                  James Smith
                </h4>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex mt-3 border rounded p-3 bg-gray-100 justify-center text-center"
        >
          <div
            class="w-1/6"
          >
            <div
              class="font-bold text-gray-500"
            >
              Talk to listen ratio
            </div>
            <div
              class="font-bold"
            >
              52/48%
            </div>
          </div>
          <div
            class="w-1/6"
          >
            <div
              class="font-bold text-gray-500"
            >
              Talking speed
            </div>
            <div
              class="font-bold"
            >
              156.8 wpm
            </div>
          </div>
          <div
            class="w-1/6"
          >
            <div
              class="font-bold text-gray-500"
            >
              Switches per hour
            </div>
            <div
              class="font-bold"
            >
              32.72
            </div>
          </div>
          <div
            class="w-1/4"
          >
            <div
              class="font-bold text-gray-500"
            >
              Pause before speaking
            </div>
            <div
              class="font-bold"
            >
              68.97ms
            </div>
          </div>
          <div
            class="w-1/4"
          >
            <div
              class="font-bold text-gray-500"
            >
              Longest customer monologue
            </div>
            <div
              class="font-bold"
            >
              37sec
            </div>
          </div>
        </div>
        <div
          class="flex mt-3"
        >
          <div
            class="w-full"
          >
            <h4>
              Seller Insights
            </h4>
            <div
              class="flex gap-2 text-center"
            >
              <div
                class="flex-1 border border-blue-500 rounded p-2"
              >
                James Smith has been talking too fast in most conversations
              </div>
              <div
                class="flex-1 border border-blue-500 rounded p-2"
              >
                James Smith's talk-to-listen ratio is 13% higher than the team's average
              </div>
              <div
                class="flex-1 border border-blue-500 rounded p-2"
              >
                Positive customer sentiments is higher than the average in 38% of calls
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex mt-3"
        >
          <div
            class="w-full"
          >
            <h4>
              Call History
            </h4>
            <div
              class="relative overflow-x-auto shadow-md sm:rounded-lg"
            >
              <table
                class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
              >
                <thead
                  class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
                >
                  <tr>
                    <th
                      class="px-6 py-3"
                      scope="col"
                    />
                    <th
                      class="px-6 py-3"
                      scope="col"
                    >
                      Title
                    </th>
                    <th
                      class="px-6 py-3"
                      scope="col"
                    >
                      Added
                    </th>
                    <th
                      class="px-6 py-3"
                      scope="col"
                    >
                      Duration
                    </th>
                    <th
                      class="px-6 py-3"
                      scope="col"
                    >
                      Phone Number
                    </th>
                    <th
                      class="px-6 py-3"
                      scope="col"
                    >
                      Related Opportunity
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr
                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
                  >
                    <td
                      class="px-6 py-4"
                    >
                      <i
                        class="bi bi-telephone"
                      />
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      Closing the deal
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      6 hours ago
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      31m 30s
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      123456789
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      Not Set
                    </td>
                  </tr>
                  <tr
                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
                  >
                    <td
                      class="px-6 py-4"
                    >
                      <i
                        class="bi bi-telephone"
                      />
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      Initial discussion
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      3 days ago
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      35m 14s
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      123456789
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      Not Set
                    </td>
                  </tr>
                  <tr
                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
                  >
                    <td
                      class="px-6 py-4"
                    >
                      <i
                        class="bi bi-telephone"
                      />
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      Initial catalog launch
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      3 days ago
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      45m 20s
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      123456789
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      Not Set
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render SellerInsights component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex mt-3"
      >
        <div
          class="w-full"
        >
          <h4>
            Seller Insights
          </h4>
          <div
            class="flex gap-2 text-center"
          >
            <div
              class="flex-1 border border-blue-500 rounded p-2"
            >
              James Smith has been talking too fast in most conversations
            </div>
            <div
              class="flex-1 border border-blue-500 rounded p-2"
            >
              James Smith's talk-to-listen ratio is 13% higher than the team's average
            </div>
            <div
              class="flex-1 border border-blue-500 rounded p-2"
            >
              Positive customer sentiments is higher than the average in 38% of calls
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex mt-3"
    >
      <div
        class="w-full"
      >
        <h4>
          Seller Insights
        </h4>
        <div
          class="flex gap-2 text-center"
        >
          <div
            class="flex-1 border border-blue-500 rounded p-2"
          >
            James Smith has been talking too fast in most conversations
          </div>
          <div
            class="flex-1 border border-blue-500 rounded p-2"
          >
            James Smith's talk-to-listen ratio is 13% higher than the team's average
          </div>
          <div
            class="flex-1 border border-blue-500 rounded p-2"
          >
            Positive customer sentiments is higher than the average in 38% of calls
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render StatisticSummary component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex mt-3 border rounded p-3 bg-gray-100 justify-center text-center"
      >
        <div
          class="w-1/6"
        >
          <div
            class="font-bold text-gray-500"
          >
            Talk to listen ratio
          </div>
          <div
            class="font-bold"
          >
            52/48%
          </div>
        </div>
        <div
          class="w-1/6"
        >
          <div
            class="font-bold text-gray-500"
          >
            Talking speed
          </div>
          <div
            class="font-bold"
          >
            156.8 wpm
          </div>
        </div>
        <div
          class="w-1/6"
        >
          <div
            class="font-bold text-gray-500"
          >
            Switches per hour
          </div>
          <div
            class="font-bold"
          >
            32.72
          </div>
        </div>
        <div
          class="w-1/4"
        >
          <div
            class="font-bold text-gray-500"
          >
            Pause before speaking
          </div>
          <div
            class="font-bold"
          >
            68.97ms
          </div>
        </div>
        <div
          class="w-1/4"
        >
          <div
            class="font-bold text-gray-500"
          >
            Longest customer monologue
          </div>
          <div
            class="font-bold"
          >
            37sec
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex mt-3 border rounded p-3 bg-gray-100 justify-center text-center"
    >
      <div
        class="w-1/6"
      >
        <div
          class="font-bold text-gray-500"
        >
          Talk to listen ratio
        </div>
        <div
          class="font-bold"
        >
          52/48%
        </div>
      </div>
      <div
        class="w-1/6"
      >
        <div
          class="font-bold text-gray-500"
        >
          Talking speed
        </div>
        <div
          class="font-bold"
        >
          156.8 wpm
        </div>
      </div>
      <div
        class="w-1/6"
      >
        <div
          class="font-bold text-gray-500"
        >
          Switches per hour
        </div>
        <div
          class="font-bold"
        >
          32.72
        </div>
      </div>
      <div
        class="w-1/4"
      >
        <div
          class="font-bold text-gray-500"
        >
          Pause before speaking
        </div>
        <div
          class="font-bold"
        >
          68.97ms
        </div>
      </div>
      <div
        class="w-1/4"
      >
        <div
          class="font-bold text-gray-500"
        >
          Longest customer monologue
        </div>
        <div
          class="font-bold"
        >
          37sec
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
